--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,7 @@ jobs:
             curl -s -X POST https://api.telegram.org/bot${{ secrets.TG_BOT_TOKEN }}/sendMessage \
               -d chat_id=$chat_id \
               -d parse_mode=Markdown \
-              -d text=$'*Успешный деплой DotEnv*\n_Проект обновлён и запущен на сервере._\nДомен: https://api.dastovard.tj\nДеплоил: ${{ github.actor }}\nВремя: ${{ github.event.head_commit.timestamp }}\n[Коммит](${{ github.event.head_commit.url }})' \
+              -d text=$'*Успешный деплой DotEnv*\n_Проект обновлён и запущен на сервере._\nДомен: https://dotenv.dastovard.tj\nДеплоил: ${{ github.actor }}\nВремя: ${{ github.event.head_commit.timestamp }}\n[Коммит](${{ github.event.head_commit.url }})' \
               -d reply_markup='{
                 "inline_keyboard": [[
                   {
